# microservices

./: .gitignore  docker-compose.yml  nixpacks.toml  railway.toml
nest-services/: Dockerfile  package.json
nest-services/src/: app.controller.ts  app.service.ts
rust-services/: .dockerignore  Cargo.toml  Dockerfile
rust-services/src/: discord.rs  main.rs  models.rs  service.rs
rust-services/src/discord/: client.rs  commands.rs  handlers.rs
rust-services/src/discord/commands/: auto_manga_commands.rs  channels_commands.rs  manga_commands.rs  scrape_manga_commands.rs  user_commands.rs
rust-services/src/models/: channels.rs  manga.rs  user.rs
rust-services/src/service/: channels_service.rs  manga_service.rs  user_service.rs
rust-services/src/utils/: mongo.rs
