[package]
name = "rust-services"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
chrono = { version = "0.4", features = ["unstable-locales", "serde"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework"] }

[dependencies.mongodb]
version = "3.2.3"